--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,5 +6,16 @@ body {
   font-size: 14px;
   line-height: 24px;
   font-weight: 700;
+  color: #000000;
   text-transform: uppercase;
+
+  background-color: #ffffff;
+
+}
+
+.intro {
+  background-color: #ffffff;
+  background-image: url("/img/intro-bg.jpg");
+  background-position: top center;
+  background-repeat: no-repeat;
 }
