--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,28 @@
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
 
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 21px;
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
@@ -13,9 +31,25 @@ body {
 
 }
 
+h2 {
+  font-size: 21px;
+  line-height: 26px;
+}
+
 .intro {
+  color: #000000;
+  text-align: center;
+
   background-color: #ffffff;
   background-image: url("/img/intro-bg.jpg");
   background-position: top center;
   background-repeat: no-repeat;
+}
+
+.intro p {
+  color: #333333;
+}
+
+.intro-uno {
+
 }
