--- a/static/css/main.css
+++ b/static/css/main.css
@@ -100,6 +100,7 @@ a {
 
 .button {
   font: inherit;
+  font-weight: 700;
   text-align: center;
   text-transform: uppercase;
   vertical-align: middle;
@@ -165,4 +166,18 @@ a {
 }
 .footer-social {
   list-style: none;
+}
+/*hotels page*/
+.inner-page {
+  text-align: left;
+
+}
+
+.site-navigation-current {
+  color: #766357;
+}
+
+.filter legend {
+  font-weight: 700;
+  font-size: 16px;
 }
