--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,9 +26,6 @@ body {
   font-weight: 400;
   color: #000000;
   text-transform: uppercase;
-
-  background-color: #ffffff;
-
 }
 
 a {
@@ -39,6 +36,14 @@ a {
   width: 1200px;
   margin: 0 auto;
   padding: 0 40px;
+  background-color: #f2f2f2;
+
+}
+
+.main-header,
+/*.welcome-banner,*/ /*необходимо разрулить цвет рамки*/
+.intro {
+  background-color: #ffffff;
 }
 
 .main-navigation {
@@ -52,16 +57,18 @@ a {
   background-color: #ffffff;
 }
 
-.main-header-logo {
-
-}
-
 .site-navigation {
-
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 20px 73px;
 
   list-style: none;
+}
+
+.site-navigation:first-child {
+  order: 2;
 }
 
 .site-navigation a {
