--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,6 +46,11 @@ a {
   background-color: #ffffff;
 }
 
+.main-header {
+  margin: 0;
+  padding: 0;
+}
+
 .main-navigation {
   display: flex;
   align-items: center;
@@ -54,9 +59,12 @@ a {
   line-height: 26px;
   color: #000000;
 
+  padding: 20px 73px;
+
   background-color: #ffffff;
 
-  margin-bottom: 0;
+  background: rgba(234, 255, 45, 0.2);
+  box-shadow: inset 0 0 0 2px rgb(234, 255, 45);
 }
 
 .site-navigation {
@@ -64,9 +72,13 @@ a {
   justify-content: space-between;
   width: 100%;
   margin: 0;
+  padding: 0;
+  /*
   padding: 20px 73px;
+  */
 
   list-style: none;
+
 }
 
 .site-navigation li:nth-child(1) {
