--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,12 +1,11 @@
 .main-footer {
-  background-color: #f9fbf6;
-
   .tag {
-    font-weight: 700;
-    font-size: 21px;
-  }
 
+  }
   .footer-social {
-    list-style: none;
+
+  }
+  .developer {
+
   }
 }
