--- a/sass/layout/_main_nav.scss
+++ b/sass/layout/_main_nav.scss
@@ -1,51 +1,9 @@
 .main-navigation {
-  display: flex;
-  align-items: center;
 
-  font-weight: 700;
-  line-height: 26px;
-  color: #000000;
+  .main-header-logo {
 
-  padding: 20px 73px;
-
-  background-color: #ffffff;
-
-  background: rgba(234, 255, 45, 0.2);
-  box-shadow: inset 0 0 0 2px rgb(234, 255, 45);
-
-  .site-navigation {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    /*
-    padding: 20px 73px;
-    */
-
-    list-style: none;
-
-    li:nth-child(1) {
-      order: 2;
-    }
-    li:nth-child(2) {
-      order: 0;
-    }
-    li:nth-child(3) {
-      order: 1;
-    }
-    li:nth-child(4) {
-      order: 3;
-    }
-    li:nth-child(5) {
-      order: 4;
-    }
-    a {
-      color: #000000;
-    }
   }
-}
+  .site-navigation {
 
-.site-navigation-current {
-  color: #766357;
+  }
 }
