--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,8 +6,10 @@ body {
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  color: #000000;
+  color: color('black');
   text-transform: uppercase;
+
+  text-align: center;
 }
 
 a {
