--- a/back.css
+++ b/back.css
@@ -24,7 +24,7 @@ body {
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  color: #000000;
+  color: color('black');
   text-transform: uppercase;
 }
 
