--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,10 @@
 .modal-appointment {
+  width: 570px;
+  background-color: red;
+
+  .appointment-form {
+    margin-top: 55px;
+  }
 
 }
 .modal {
