--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,9 +8,9 @@ $colors: (
   'textfield-container': #f2f2f2,
   'textfield-hover': #ebebeb,
   'bg-white': #eeeeee,
-  'blu': #81b3d2,
-  'blu-hover': #669ec0,
-  'blu-active': #5496bd,
+  'blue': #81b3d2,
+  'blue-hover': #669ec0,
+  'blue-active': #5496bd,
   'brown': #766357,
   'brown-hover': #604e43,
   'brown-active': #503e33,
