--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,11 +1,5 @@
 .modal-appointment {
-  width: 570px;
-  background-color: red;
-
-  .appointment-form {
-    margin-top: 55px;
-  }
-
+  background-color: color('white');
 }
 .modal {
 
