--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -15,7 +15,7 @@
 .obertka {
   width: 400px;
   color: color('white');
-  background-color: color('blu');
+  background-color: color('blue');
 
   margin: 0;
   padding: 47px 49px;
