--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,52 +5,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  p {
-    padding: 0;
-    margin: 0;
-    margin-bottom: 35px;
-
-      input {
-        width: 347px;
-        height: 40px;
-      }
-  }
-
-  label {
-    line-height: 26px;
-    font-weight: 700;
-  }
+  38 346
   input {
-    margin: 0;
-    padding: 0;
     font: inherit;
-    border: 0 solid color('white');
-    background-color: color('textfield-container');
-
-    &:hover {
-      background-color: color('textfield-hover')
-    }
-    &:focus {
-      background-color: color('white');
-    }
   }
-  .form-obertka {
-    display: flex;
-    margin-bottom: 56px;
-    p {
-      margin: 0;
-      &:nth-child(2) {
-        margin-left: 50px;
-      }
-      input {
-        width: 50px;
-        height: 40px;
-        align-items: center;
-        margin: 0;
-        padding: 0;
-      }
-    }
+  p {
 
+    label {
+      font-weight: 700;
+      line-height: 26px;
+
+    }
   }
 }
