--- a/static/css/main.css
+++ b/static/css/main.css
@@ -117,39 +117,12 @@ input[type="radio"].visually-hidden {
   display: flex;
   flex-direction: column;
   align-items: center; }
-  .appointment-form p {
-    padding: 0;
-    margin: 0;
-    margin-bottom: 35px; }
-    .appointment-form p input {
-      width: 347px;
-      height: 40px; }
-  .appointment-form label {
-    line-height: 26px;
-    font-weight: 700; }
-  .appointment-form input {
-    margin: 0;
-    padding: 0;
-    font: inherit;
-    border: 0 solid #ffffff;
-    background-color: #f2f2f2; }
-    .appointment-form input:hover {
-      background-color: #ebebeb; }
-    .appointment-form input:focus {
-      background-color: #ffffff; }
-  .appointment-form .form-obertka {
-    display: flex;
-    margin-bottom: 56px; }
-    .appointment-form .form-obertka p {
-      margin: 0; }
-      .appointment-form .form-obertka p:nth-child(2) {
-        margin-left: 50px; }
-      .appointment-form .form-obertka p input {
-        width: 50px;
-        height: 40px;
-        align-items: center;
-        margin: 0;
-        padding: 0; }
+  .appointment-form 38 346
+input {
+    font: inherit; }
+  .appointment-form p label {
+    font-weight: 700;
+    line-height: 26px; }
 
 .welcome-banner {
   margin-bottom: 60px;
