--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,16 +5,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  38 346
   input {
     font: inherit;
+    border: none;
+  }
+  input[type="date"] {
+    width: 346px;
+    height: 38px;
+    margin-left: 20px;
+    background-color: color('textfield-container');
+  }
+  input[type="text"] {
+    width: 13px;
+    height: 13px;
   }
   p {
 
     label {
       font-weight: 700;
       line-height: 26px;
-
     }
   }
 }
