--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -17,10 +17,13 @@
     font-size: 21px;
     line-height: 26px;
     font-weight: bold;
+    margin-bottom: 36px;
   }
   p {
     color: color('gray');
     line-height: 26px;
+    margin: 0;
+    padding: 0;
   }
 
 }
