--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -52,3 +52,13 @@
   width: 16px;
 }
 
+.social-button {
+  width: 46px;
+  height: 48px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: color('blue');
+
+}
